# fpse-chess

./: .gitignore  README.md  board.mli  controller.mli  dune-project  gui.mli
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/.aliases/default/tests/: all-00000000000000000000000000000000
_build/default/: README.md
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/52c49c7c6bc3dda051f54733e606b527/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmo
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/src/: board.cma  board.cmxa  board.cmxs  board.ml  board.mli  board.pp.ml  board.pp.mli  controller.mli  dune  gui.ml
_build/default/src/.board.objs/byte/: board.cmi  board.cmo  board.cmt  board.cmti
_build/default/src/.board.objs/native/: board.cmx
_build/default/src/.merlin-conf/: lib-board
_build/default/tests/: tests.bc
_build/default/tests/.merlin-conf/: exe-tests
_build/default/tests/.tests.eobjs/byte/: dune__exe__Tests.cmi  dune__exe__Tests.cmo  dune__exe__Tests.cmt
_build/default/tests/.tests.eobjs/native/: dune__exe__Tests.cmx
src/: board.ml  board.mli  bot.ml  bot.mli  controller.ml  controller.mli  dune  gui.ml  gui.mli
tests/: dune  quickcheck_examples.ml  tests.ml
