(library
  (name board)
  (modules board)
  (libraries 
    core)
  (preprocess (pps bisect_ppx ppx_jane))
)

(library
  (name gui)
  (modules gui)
  (libraries 
    core
    board)
  (preprocess (pps bisect_ppx ppx_jane))
)


(executable
  (name controller)
  (modules controller)
  (libraries
    board
    core
    gui)
    (preprocess (pps ppx_jane))
  )